Added favicons and logos

--- a/GeneralKnowledge.html
+++ b/GeneralKnowledge.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <!--Responsive Site-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Favicon and opengraphs -->
+    <link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
+    <meta property="og:title" content="Pediafor Quiz">
+    <meta property="og:description" content="Daily Quizes on General Knowledge by Pediafor">
+    <meta property="og:image" content="pediafor_logo.jpg">
+    <meta property="og:url" content="https://pediaforquiz.000webhostapp.com/">
+    <meta name="description" content="Pediafor Quiz on General Knowledge">
+
     <title>Pediafor Quiz</title>
     <style>
         * {
