--- a/GeneralKnowledge.html
+++ b/GeneralKnowledge.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Pediafor Quiz">
     <meta property="og:description" content="Daily Quizes on General Knowledge by Pediafor">
     <meta property="og:image" content="pediafor_logo.jpg">
-    <meta property="og:url" content="https://pediaforquiz.000webhostapp.com/">
+    <meta property="og:url" content="https://pediafor.github.io/Quiz/GeneralKnowledge.html">
     <meta name="description" content="Pediafor Quiz on General Knowledge">
 
     <title>Pediafor Quiz</title>
